[tool.poetry]
name = "ignis"
version = "0.1.0"
description = "Interact with flair api"
authors = ["insertead"]
readme = "README.md"
license = "Apache-2.0"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.7.4"
msgpack = "^1.0.2"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"
isort = "^5.9.3"
black = "^21.7b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
fast = true

[tool.isort]
profile = "black"
multi_line_output = 3
skip_gitignore = true

[tool.pytest.ini_options]
asyncio_mode = "auto"