[tool.poetry]
name = "ignis"
version = "0.1.0"
description = "An asynchronous client to the Flair API."
authors = ["insertdead <mdsc0111@tuta.io>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
